# privateLeague

./: Cargo.toml  README.md  parser.py
asset/: script.js  style.css  test.html  test2.html
src/: main.rs
src/com/: command.rs  generator.rs  mod.rs  tree.rs
src/league/: debug.rs  game.rs  league.rs  matches.rs  mod.rs  player.rs
src/parser/: command.rs  mod.rs
src/serialization/: mod.rs
src/websocket/: ws.rs
src/ws/: ws.rs
